Support custom 404 pages (#226)
Co-authored-by: Josh Pollara <75546+joshpollara@users.noreply.github.com>

--- a/packages/starlight/404.astro
+++ b/packages/starlight/404.astro
@@ -1,58 +1,39 @@
 ---
+import { getEntry } from 'astro:content';
 import config from 'virtual:starlight/user-config';
-import { pathWithBase } from './utils/base';
-
-// Built-in CSS styles.
-import './style/props.css';
-import './style/reset.css';
-import './style/shiki.css';
-import './style/util.css';
-
-// Layout
-import PageFrame from './layout/PageFrame.astro';
-
-// Components
-import Header from './components/Header.astro';
-import MarkdownContent from './components/MarkdownContent.astro';
-import ThemeProvider from './components/ThemeProvider.astro';
-import SkipLink from './components/SkipLink.astro';
-
-// Important that this is the last import so it can override built-in styles.
-import 'virtual:starlight/user-css';
+import EmptyContent from './components/EmptyMarkdown.md';
+import Page from './layout/Page.astro';
+import type { StarlightDocsEntry } from './utils/routing';
+import { useTranslations } from './utils/translations';
 
 const { lang = 'en', dir = 'ltr', locale } = config.defaultLocale || {};
+const entryMeta = { dir, lang, locale };
+const t = useTranslations(locale);
+
+const fallbackEntry: StarlightDocsEntry = {
+  slug: '404',
+  id: '404.md' as StarlightDocsEntry['id'],
+  body: '',
+  collection: 'docs',
+  data: {
+    title: '404',
+    template: 'splash',
+    editUrl: false,
+    head: [],
+    hero: { tagline: t('404.text'), actions: [] },
+  },
+  render: async () => ({
+    Content: EmptyContent,
+    headings: [],
+    remarkPluginFrontmatter: {},
+  }),
+};
+
+const userEntry = await getEntry('docs', '404');
+const entry = userEntry || fallbackEntry;
+const { Content, headings } = await entry.render();
 ---
 
-<html lang={lang} dir={dir}>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Not found</title>
-  </head>
-  <body>
-    <ThemeProvider />
-    <SkipLink {locale} />
-    <PageFrame {locale} hasSidebar={false}>
-      <Header slot="header" {locale} />
-      <main>
-        <MarkdownContent>
-          <h1 id="_top" data-page-title>404</h1>
-          <p>Houston, we have a problem.</p>
-          <p>
-            We couldn’t find that link. Check the address or
-            <a href={pathWithBase('/')}>head back home</a>.
-          </p>
-        </MarkdownContent>
-      </main>
-    </PageFrame>
-
-    <style>
-      main {
-        margin: auto;
-        padding: clamp(2rem, 10vmin, 6rem) var(--sl-nav-pad-x);
-        max-width: var(--sl-content-width);
-        max-width: max-content;
-      }
-    </style>
-  </body>
-</html>
+<Page {headings} entry={entry} slug={entry.slug} {...entryMeta} {entryMeta}>
+  <Content />
+</Page>
