feat: expose icon component

--- a/packages/starlight/components/CallToAction.astro
+++ b/packages/starlight/components/CallToAction.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 import type { Icons } from './Icons';
 
 interface Props {
