--- a/packages/starlight/components/EditLink.astro
+++ b/packages/starlight/components/EditLink.astro
@@ -2,7 +2,7 @@
 import type { CollectionEntry } from 'astro:content';
 import config from 'virtual:starlight/user-config';
 import { useTranslations } from '../utils/translations';
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 
 interface Props {
   data: CollectionEntry<'docs'>['data'];
