--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -1,6 +1,6 @@
 ---
 import config from 'virtual:starlight/user-config';
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 
 type Platform = keyof NonNullable<typeof config.social>;
 
