--- a/packages/starlight/user-components/Icon.astro
+++ b/packages/starlight/user-components/Icon.astro
@@ -1,5 +1,5 @@
 ---
-import { Icons } from './Icons';
+import { Icons } from '../components/Icons';
 
 interface Props {
   name: keyof typeof Icons;
