--- a/packages/starlight/components/MobileMenuToggle.astro
+++ b/packages/starlight/components/MobileMenuToggle.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 import { useTranslations } from '../utils/translations';
 
 interface Props {
