--- a/packages/starlight/components/PrevNextLinks.astro
+++ b/packages/starlight/components/PrevNextLinks.astro
@@ -1,7 +1,7 @@
 ---
 import type { Link } from '../utils/navigation';
 import { useTranslations } from '../utils/translations';
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 
 interface Props {
   prev: Link | undefined;
