--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -1,7 +1,7 @@
 ---
 import '@pagefind/default-ui/css/ui.css';
 import { useTranslations } from '../utils/translations';
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 
 interface Props {
   locale: string | undefined;
