--- a/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
+++ b/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
@@ -1,6 +1,6 @@
 ---
 import { useTranslations } from '../../utils/translations';
-import Icon from '../Icon.astro';
+import Icon from '../../user-components/Icon.astro';
 import TableOfContentsList from './TableOfContentsList.astro';
 import type { TocItem } from './generateToC';
 
