--- a/packages/starlight/components/ThemeProvider.astro
+++ b/packages/starlight/components/ThemeProvider.astro
@@ -1,5 +1,5 @@
 ---
-import Icon from './Icon.astro';
+import Icon from '../user-components/Icon.astro';
 ---
 
 {/* This is intentionally inlined to avoid FOUC. */}
