--- a/packages/starlight/components/Footer.astro
+++ b/packages/starlight/components/Footer.astro
@@ -26,7 +26,7 @@ const prevNextLinks = getPrevNextLinks(sidebar);
     }
     {
       config.showUpdateDate && (
-        <LastUpdated id={entry.id} {lang} {locale} />
+        <LastUpdated id={entry.id} {lang} lastUpdated={entry.data.lastUpdated} {locale} />
       )
     }
   </div>
