Add `lastUpdated` global and frontmatter options (#256)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/packages/starlight/components/Footer.astro
+++ b/packages/starlight/components/Footer.astro
@@ -24,7 +24,20 @@ const prevNextLinks = getPrevNextLinks(sidebar);
         <EditLink data={entry.data} id={entry.id} {locale} />
       )
     }
-    <LastUpdated id={entry.id} {lang} {locale} />
+    {
+      (entry.data.lastUpdated ?? config.lastUpdated) && (
+        <LastUpdated
+          id={entry.id}
+          {lang}
+          lastUpdated={
+            typeof entry.data.lastUpdated !== 'boolean'
+              ? entry.data.lastUpdated
+              : undefined
+          }
+          {locale}
+        />
+      )
+    }
   </div>
   <PrevNextLinks {...prevNextLinks} {dir} {locale} />
 </footer>
