Open external social links in new tab

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -20,7 +20,7 @@ const links = Object.entries(config.social || {}).filter(([, url]) =>
   links.length > 0 && (
     <>
       {links.map(([platform, url]) => (
-        <a href={url} rel="me">
+        <a href={url} target="_blank" rel="me noopener">
           <span class="sr-only">{labels[platform]}</span>
           <Icon name={platform} />
         </a>
