fix(SiteTitle.astro): revert changes to SiteTitle.astro and add changeset

--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -23,8 +23,7 @@ if (config.logo) {
   if (err) throw new Error(err);
 }
 
-const locale =  Astro.props.locale === 'root' ? '' : Astro.props.locale;
-const href = pathWithBase(locale || '/');
+const href = pathWithBase(Astro.props.locale || '/');
 ---
 
 <a {href} class="site-title flex">
