Improve code block and inline code font stack

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -87,6 +87,7 @@
 
   .content :global(pre code) {
     all: unset;
+    font-family: var(--__sb-font-mono);
   }
 
   .content :global(blockquote) {
