Rename `__sb` prefix to `__sl` (missed in an earlier refactor)

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -87,7 +87,7 @@
 
   .content :global(pre code) {
     all: unset;
-    font-family: var(--__sb-font-mono);
+    font-family: var(--__sl-font-mono);
   }
 
   .content :global(blockquote) {
