--- a/packages/starlight/style/reset.css
+++ b/packages/starlight/style/reset.css
@@ -18,7 +18,7 @@ html[data-theme='light'] {
 }
 
 body {
-  font-family: var(--__sb-font);
+  font-family: var(--__sl-font);
   line-height: var(--sl-line-height);
   -webkit-font-smoothing: antialiased;
   color: var(--sl-color-text);
@@ -43,5 +43,5 @@ h6 {
 }
 
 code {
-  font-family: var(--__sb-font-mono);
+  font-family: var(--__sl-font-mono);
 }
