--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -4,15 +4,7 @@
   .content
     > :global(
       :not(a, strong, em, del, span, input)
-        + :not(
-          a,
-          strong,
-          em,
-          del,
-          span,
-          input,
-          :where([class~='not-content'] *)
-        )
+        + :not(a, strong, em, del, span, input, :where(.not-content *))
     ) {
     margin-top: 1.5rem;
   }
@@ -21,15 +13,15 @@
   .content
     :global(
       :not(h1, h2, h3, h4, h5, h6)
-        + :is(h1, h2, h3, h4, h5, h6):not(:where([class~='not-content'] *))
+        + :is(h1, h2, h3, h4, h5, h6):not(:where(.not-content *))
     ) {
     margin-top: 2.5rem;
   }
 
-  .content :global(li + li:not(:where([class~='not-content'] *))),
-  .content :global(dt + dt:not(:where([class~='not-content'] *))),
-  .content :global(dt + dd:not(:where([class~='not-content'] *))),
-  .content :global(dd + dd:not(:where([class~='not-content'] *))) {
+  .content :global(li + li:not(:where(.not-content *))),
+  .content :global(dt + dt:not(:where(.not-content *))),
+  .content :global(dt + dd:not(:where(.not-content *))),
+  .content :global(dd + dd:not(:where(.not-content *))) {
     margin-top: 0.25rem;
   }
 
@@ -43,21 +35,20 @@
           del,
           span,
           input,
-          :where([class~='not-content'] *)
+          :where(.not-content *)
         )
     ) {
     margin-bottom: 1.25rem;
   }
 
-  .content :global(dt:not(:where([class~='not-content'] *))) {
+  .content :global(dt:not(:where(.not-content *))) {
     font-weight: 700;
   }
-  .content :global(dd:not(:where([class~='not-content'] *))) {
+  .content :global(dd:not(:where(.not-content *))) {
     padding-inline-start: 1rem;
   }
 
-  .content
-    :global(:is(h1, h2, h3, h4, h5, h6):not(:where([class~='not-content'] *))) {
+  .content :global(:is(h1, h2, h3, h4, h5, h6):not(:where(.not-content *))) {
     color: var(--sl-color-white);
     line-height: var(--sl-line-height-headings);
     font-weight: 600;
@@ -65,76 +56,74 @@
 
   .content
     :global(
-      :is(img, picture, video, canvas, svg, iframe):not(
-          :where([class~='not-content'] *)
-        )
+      :is(img, picture, video, canvas, svg, iframe):not(:where(.not-content *))
     ) {
     display: block;
     max-width: 100%;
     height: auto;
   }
 
-  .content :global(h1:not(:where([class~='not-content'] *))) {
+  .content :global(h1:not(:where(.not-content *))) {
     font-size: var(--sl-text-h1);
   }
-  .content :global(h2:not(:where([class~='not-content'] *))) {
+  .content :global(h2:not(:where(.not-content *))) {
     font-size: var(--sl-text-h2);
   }
-  .content :global(h3:not(:where([class~='not-content'] *))) {
+  .content :global(h3:not(:where(.not-content *))) {
     font-size: var(--sl-text-h3);
   }
-  .content :global(h4:not(:where([class~='not-content'] *))) {
+  .content :global(h4:not(:where(.not-content *))) {
     font-size: var(--sl-text-h4);
   }
-  .content :global(h5:not(:where([class~='not-content'] *))) {
+  .content :global(h5:not(:where(.not-content *))) {
     font-size: var(--sl-text-h5);
   }
-  .content :global(h6:not(:where([class~='not-content'] *))) {
+  .content :global(h6:not(:where(.not-content *))) {
     font-size: var(--sl-text-h6);
   }
 
-  .content :global(a:not(:where([class~='not-content'] *))) {
+  .content :global(a:not(:where(.not-content *))) {
     color: var(--sl-color-text-accent);
   }
-  .content :global(a:hover:not(:where([class~='not-content'] *))) {
+  .content :global(a:hover:not(:where(.not-content *))) {
     color: var(--sl-color-white);
   }
 
-  .content :global(code:not(:where([class~='not-content'] *))) {
+  .content :global(code:not(:where(.not-content *))) {
     background-color: var(--sl-color-bg-inline-code);
     margin-block: -0.125rem;
     padding: 0.125rem 0.375rem;
   }
 
-  .content :global(pre:not(:where([class~='not-content'] *))) {
+  .content :global(pre:not(:where(.not-content *))) {
     border: 1px solid var(--sl-color-gray-5);
     padding: 0.75rem 1rem;
     font-size: var(--sl-text-code);
   }
 
-  .content :global(pre code:not(:where([class~='not-content'] *))) {
+  .content :global(pre code:not(:where(.not-content *))) {
     all: unset;
   }
 
-  .content :global(blockquote:not(:where([class~='not-content'] *))) {
+  .content :global(blockquote:not(:where(.not-content *))) {
     border-inline-start: 1px solid var(--sl-color-gray-5);
     padding-inline-start: 1rem;
   }
 
-  .content :global(table:not(:where([class~='not-content'] *))) {
+  .content :global(table:not(:where(.not-content *))) {
     display: block;
     overflow: auto;
     border-collapse: collapse;
   }
-  .content :global(tr:nth-child(2n):not(:where([class~='not-content'] *))) {
+  .content :global(tr:nth-child(2n):not(:where(.not-content *))) {
     background-color: var(--sl-color-gray-7, var(--sl-color-gray-6));
   }
-  .content :global(:is(th, td):not(:where([class~='not-content'] *))) {
+  .content :global(:is(th, td):not(:where(.not-content *))) {
     border: 1px solid var(--sl-color-hairline);
     padding: 0.375rem 0.8125rem;
   }
 
-  .content :global(hr:not(:where([class~='not-content'] *))) {
+  .content :global(hr:not(:where(.not-content *))) {
     border: 0;
     border-bottom: 1px solid var(--sl-color-hairline);
   }
