add Icon Name for accessibility

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -9,6 +9,8 @@ const labels: Record<Platform, string> = {
   discord: 'Discord',
   twitter: 'Twitter',
   mastodon: 'Mastodon',
+  codeberg: 'Codeberg',
+  youtube: 'Youtube',  
 };
 
 const links = Object.entries(config.social || {}).filter(([, url]) =>
