Fix capitalisation of YouTube label

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -10,7 +10,7 @@ const labels: Record<Platform, string> = {
   twitter: 'Twitter',
   mastodon: 'Mastodon',
   codeberg: 'Codeberg',
-  youtube: 'Youtube',  
+  youtube: 'YouTube',  
 };
 
 const links = Object.entries(config.social || {}).filter(([, url]) =>
