Add social link support for LinkedIn, Threads, and Twitch

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -10,7 +10,10 @@ const labels: Record<Platform, string> = {
   twitter: 'Twitter',
   mastodon: 'Mastodon',
   codeberg: 'Codeberg',
-  youtube: 'YouTube',  
+  youtube: 'YouTube',
+  threads: 'Threads',
+  linkedin: 'LinkedIn',
+  twitch: 'Twitch',
 };
 
 const links = Object.entries(config.social || {}).filter(([, url]) =>
