fix: build warnings with ts `verbatimModuleSyntax` compiler option

--- a/packages/starlight/components/Footer.astro
+++ b/packages/starlight/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import config from 'virtual:starlight/user-config';
-import { SidebarEntry, getPrevNextLinks } from '../utils/navigation';
+import { type SidebarEntry, getPrevNextLinks } from '../utils/navigation';
 import type { StarlightDocsEntry } from '../utils/routing';
 import type { LocaleData } from '../utils/slugs';
 
