--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -2,7 +2,7 @@
 
 <style>
   .content
-    > :global(
+    :global(
       :not(a, strong, em, del, span, input)
         + :not(a, strong, em, del, span, input, :where(.not-content *))
     ) {
