allow top-margin for elements marked as content
Signed-off-by: Lorenzo Lewis <lorenzo@crabnebula.dev>

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -5,6 +5,11 @@
     :global(
       :not(a, strong, em, del, span, input)
         + :not(a, strong, em, del, span, input, :where(.not-content *))
+    ),
+  .content
+    :global(
+      .content
+        + :not(a, strong, em, del, span, input, :where(.not-content *))
     ) {
     margin-top: 1.5rem;
   }
