--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -96,10 +96,13 @@ const pagefindTranslations = {
 
       // Listen for `/` and `cmd + k` keyboard shortcuts.
       window.addEventListener('keydown', (e) => {
+        const isInput =
+          document.activeElement &&
+          ['input', 'select', 'textarea'].includes(document.activeElement.tagName.toLowerCase());
         if (e.metaKey === true && e.key === 'k') {
           dialog.open ? closeModal() : openModal();
           e.preventDefault();
-        } else if (e.key === '/' && !dialog.open) {
+        } else if (e.key === '/' && !dialog.open && !isInput) {
           openModal();
           e.preventDefault();
         }
