--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -58,6 +58,8 @@ const href = pathWithBase(Astro.props.locale || '/');
 <style>
 	.site-title {
 		justify-self: flex-start;
+		max-width: 100%;
+		overflow: hidden;
 		align-items: center;
 		gap: var(--sl-nav-gap);
 		font-size: var(--sl-text-h4);
