Add GitLab to social link icons

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -6,6 +6,7 @@ type Platform = keyof NonNullable<typeof config.social>;
 
 const labels: Record<Platform, string> = {
 	github: 'GitHub',
+	gitlab: 'GitLab',
 	discord: 'Discord',
 	twitter: 'Twitter',
 	mastodon: 'Mastodon',
