Set `tab-size` on content code blocks

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -90,6 +90,7 @@
 		border: 1px solid var(--sl-color-gray-5);
 		padding: 0.75rem 1rem;
 		font-size: var(--sl-text-code);
+		tab-size: 2;
 	}
 
 	.content :global(pre code:not(:where(.not-content *))) {
