--- a/docs/src/components/icons-list.astro
+++ b/docs/src/components/icons-list.astro
@@ -59,7 +59,7 @@ const icons = Object.keys(Icons) as (keyof typeof Icons)[];
 
 	.icon-preview:hover, .icon-preview:focus {
 		cursor: pointer;
-		border: 1px solid var(--sl-color-gray-4);
-		background: var(--sl-color-gray-5);
+		border: 1px solid var(--sl-color-gray-3);
+		background: var(--sl-color-gray-7, var(--sl-color-gray-6));
 	}
 </style>
