--- a/docs/src/components/icons-list.astro
+++ b/docs/src/components/icons-list.astro
@@ -23,7 +23,7 @@ const icons = Object.keys(Icons) as (keyof typeof Icons)[];
   icons.forEach((icon) => {
     icon.addEventListener('click', () => {
       const iconName = icon.id;
-      const copiedValue = `<Icon name="${iconName}" size="2rem" />`;
+      const copiedValue = `<Icon name="${iconName}" />`;
       navigator.clipboard.writeText(copiedValue);
 
       const iconLabel = document.querySelector(`#${iconName} span`);
