--- a/docs/src/components/icons-list.astro
+++ b/docs/src/components/icons-list.astro
@@ -9,7 +9,7 @@ const icons = Object.keys(Icons) as (keyof typeof Icons)[];
 	{
 		icons.map((icon) => {
 			return (
-				<button class="icon-preview" aria-label={`Copy ${icon} icon to clipboard`} id={icon}>
+				<button class="icon-preview" aria-label={`Copy ${icon} icon to clipboard`} data-name={icon}>
 					<Icon name={icon} size="1.5rem" />
 					<span aria-live="polite">{icon}</span>
 				</button>
