--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -87,9 +87,8 @@ interface Props {
 		border-radius: 0.25rem;
 		text-decoration: none;
 		color: var(--sl-color-gray-2);
-		padding: 0.1em var(--sl-sidebar-item-padding-inline);
-		text-indent: calc(var(--sl-sidebar-item-padding-inline) * -1);
-  		padding-inline-start: calc(var(--sl-sidebar-item-padding-inline) * 2);
+		padding: 0.3em var(--sl-sidebar-item-padding-inline);
+		line-height: 1.4em;
 	}
 
 	a:hover,
