Remove line-height unit

--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -88,7 +88,7 @@ interface Props {
 		text-decoration: none;
 		color: var(--sl-color-gray-2);
 		padding: 0.3em var(--sl-sidebar-item-padding-inline);
-		line-height: 1.4em;
+		line-height: 1.4;
 	}
 
 	a:hover,
