Improve styling of sidebar entries that wrap (#419)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -87,7 +87,8 @@ interface Props {
 		border-radius: 0.25rem;
 		text-decoration: none;
 		color: var(--sl-color-gray-2);
-		padding: 0.1em var(--sl-sidebar-item-padding-inline);
+		padding: 0.3em var(--sl-sidebar-item-padding-inline);
+		line-height: 1.4;
 	}
 
 	a:hover,
