--- a/packages/starlight/components/TableOfContents/TableOfContentsList.astro
+++ b/packages/starlight/components/TableOfContents/TableOfContentsList.astro
@@ -58,6 +58,14 @@ const { toc, isMobile = false, depth = 0 } = Astro.props;
 		text-decoration: none;
 		outline-offset: var(--sl-outline-offset-inside);
 	}
+	@supports (padding: max(0px)) {
+		:global([dir='ltr']) .isMobile a {
+			padding-right: env(safe-area-inset-right);
+		}
+		:global([dir='rtl']) .isMobile a {
+			padding-left: env(safe-area-inset-left);
+		}
+	}
 	.isMobile:first-child > li:first-child > a {
 		border-top: 0;
 	}
