--- a/packages/starlight/components/HeadSEO.astro
+++ b/packages/starlight/components/HeadSEO.astro
@@ -22,7 +22,7 @@ const headDefaults: z.input<ReturnType<typeof HeadConfigSchema>> = [
 	{ tag: 'meta', attrs: { charset: 'utf-8' } },
 	{
 		tag: 'meta',
-		attrs: { name: 'viewport', content: 'width=device-width, initial-scale=1' },
+		attrs: { name: 'viewport', content: 'width=device-width, initial-scale=1, viewport-fit=cover' },
 	},
 	{ tag: 'title', content: title },
 	{ tag: 'link', attrs: { rel: 'canonical', href: canonical?.href } },
