feat: increase markdown table border contrast

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -112,7 +112,7 @@
 		background-color: var(--sl-color-gray-7, var(--sl-color-gray-6));
 	}
 	.content :global(:is(th, td):not(:where(.not-content *))) {
-		border: 1px solid var(--sl-color-hairline);
+		border: 1px solid var(--sl-color-hairline-light);
 		padding: 0.375rem 0.8125rem;
 	}
 
